fix flexbox .wrap

--- a/assets/scss/core/_flexbox.scss
+++ b/assets/scss/core/_flexbox.scss
@@ -1,50 +1,46 @@
 /* Reusable Flex Classes (to mitigate prefix bloat)
 ========================================================= */
 
+// Global
 .flex, %flex {
   display: flex;
 }
+.wrap, %wrap {
+  flex-wrap: wrap;
+}
 
+// Justify Content
 .jcfs, %jcfs {
   justify-content: flex-start;
 }
-
 .jcc, %jcc {
   justify-content: center;
 }
-
 .jcsb, %jcsb {
   justify-content: space-between;
 }
-
 .jcsa, %jcsa {
   justify-content: space-around;
 }
 
+// Align Items
 .aic, %aic {
   align-items: center;
 }
-
 .aifs, %aifs {
   align-items: flex-start;
 }
-
 .aife, %aife {
   align-items: flex-end;
 }
 
+// Align Self
 .asc, %asc {
   align-self: center;
 }
-
 .asfs, %asfs {
   align-self: flex-start;
 }
-
 .asfe, %asfe {
   align-self: flex-end;
-}
-
-.wrap %wrap{
-  flex-wrap: wrap;
 }
